fixed the hero image text, I had to move it out of the container on the index ejs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,8 +65,11 @@ h3 {
 
 #hero {
     text-align: center;
-    margin-top: 16%;
+    top: 33%;
+    left: 30%;
+    right: 2%;
     font-size: 2em;
+    position: absolute;
 }
 
 .register, .login {
